test/library/standard/Sort/errors/error-multiple-interfaces.4.good
error-multiple-interfaces.chpl:27: error: The comparator R4 should only implement one sort comparator interface.
